--- a/cursos/espanol/deeplearning/E1_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/E1_obtener_vectores.ipynb
@@ -615,7 +615,8 @@
     "- [ChromaDB](https://docs.trychroma.com/getting-started)\n",
     "- Imagenes y texto con CLIP:\n",
     "    - [Usando sentence bert para busqueda de imagenes](https://www.sbert.net/examples/applications/image-search/README.html)\n",
-    "    - [Notebook de ejemplo](https://github.com/UKPLab/sentence-transformers/blob/master/examples/applications/image-search/Image_Search.ipynb)"
+    "    - [Notebook de ejemplo](https://github.com/UKPLab/sentence-transformers/blob/master/examples/applications/image-search/Image_Search.ipynb)\n",
+    "- [Customizing Embeddings](https://cookbook.openai.com/examples/customizing_embeddings)"
    ]
   },
   {
