--- a/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb
+++ b/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb
@@ -708,6 +708,7 @@
    "source": [
     "## Agentes, cursos y ejemplos:\n",
     "\n",
+    "- [AI Agents Directory](https://aiagentsdirectory.com/categories)\n",
     "- [Large Language Model Agents MOOC, Fall 2024](https://llmagents-learning.org/f24)\n",
     "- [Carnegie Melon University Agent Workshop 2024](https://cmu-agent-workshop.github.io)\n",
     "- [Multimodal Report Generation Agent](https://github.com/run-llama/llama_parse/blob/main/examples/multimodal/multimodal_report_generation_agent.ipynb)"
@@ -721,7 +722,8 @@
    },
    "source": [
     "## Referencias:\n",
-    "\n",
+    "- [Building effective agents](https://www.anthropic.com/research/building-effective-agents)\n",
+    "- [Biblioteca de Prompts](https://docs.anthropic.com/es/prompt-library/library)\n",
     "- [Exa docs](https://docs.exa.ai/reference/getting-started-with-python)\n",
     "- [Exa Researcher Python Colab Notebook](https://colab.research.google.com/drive/1Aj6bBptSHWxZO7GVG2RoWtQSEkpabuaF)\n"
    ]
