--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -63,6 +63,8 @@
     "- [OpenAI RL educational resource](https://spinningup.openai.com/en/latest/spinningup/rl_intro.html)\n",
     "- [Multi-Agent Reinforcement Learning: Foundations and Modern Approaches](https://www.marl-book.com)\n",
     "- [Stanford Course](https://web.stanford.edu/class/cs234/index.html) - [[Videos]](https://www.youtube.com/watch?v=E3f2Camj0Is&list=PLoROMvodv4rOSOPzutgyCTapiGlY2Nd8u) - [[Code]](https://github.com/tallamjr/stanford-cs234/tree/master)\n",
+    "- [Theoretical Foundations of Reinforcement Learning at Univertisy of Alberta](https://rltheory.github.io)\n",
+    "- [Robotics at Michigan University](https://robotics.umich.edu/academics/courses/online-courses/)\n",
     "- [Deep Mind RL Video Series 1](https://www.youtube.com/playlist?list=PLqYmG7hTraZDM-OYHWgPebj2MfCFzFObQ) and [slides](https://www.davidsilver.uk/teaching/)\n",
     "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
@@ -115,6 +117,10 @@
     "\n",
     "## Robots\n",
     "\n",
+    "- [ROS](https://www.ros.org)\n",
+    "- [MuJoCo](https://mujoco.readthedocs.io/en/stable/overview.html)\n",
+    "- [Genesis](https://genesis-world.readthedocs.io/en/latest/)\n",
+    "- [NVIDIA Isacc](https://developer.nvidia.com/isaac/sim)\n",
     "- [Gymnasium Robotics](https://robotics.farama.org)\n",
     "- [panda-gym](https://github.com/qgallouedec/panda-gym)\n",
     "\n",
