--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -126,7 +126,16 @@
     "\n",
     "### LeRobot\n",
     "- [LeRobot](https://github.com/huggingface/lerobot)\n",
+    "\n",
+    "### SO100\n",
     "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)\n",
+    "- [How to use the SO-ARM100 robotic arm in Lerobot](https://wiki.seeedstudio.com/lerobot_so100m/)\n",
+    "- [How to Import and Control SO100Arm Kit in Isaac Sim](https://wiki.seeedstudio.com/lerobot_so100m_isaacsim/)\n",
+    "\n",
+    "#### Feetech Servos\n",
+    "- [feetech servos sdk](https://github.com/Adam-Software/Feetech-Servo-SDK/tree/main)\n",
+    "- [feetech examples](https://github.com/hansonrobotics/servo_experiments)\n",
+    "- [lerobot feetech class](https://github.com/huggingface/lerobot/blob/main/lerobot/common/robot_devices/motors/feetech.py)\n",
     "  \n",
     "-----\n",
     "\n",
