--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -131,6 +131,8 @@
     "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)\n",
     "- [How to use the SO-ARM100 robotic arm in Lerobot](https://wiki.seeedstudio.com/lerobot_so100m/)\n",
     "- [How to Import and Control SO100Arm Kit in Isaac Sim](https://wiki.seeedstudio.com/lerobot_so100m_isaacsim/)\n",
+    "- [Buy Assembled](https://shop.wowrobo.com/products/so-arm100-diy-kit-assembled-version?variant=46419129762009)\n",
+    "- [Buy fancy version](https://robots.phospho.ai)\n",
     "\n",
     "#### Feetech Servos\n",
     "- [feetech servos sdk](https://github.com/Adam-Software/Feetech-Servo-SDK/tree/main)\n",
