--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -153,7 +153,9 @@
     "- [`conda activate $ENVIRONMENT_NAME`](): activa el entorno virtual\n",
     "- [`conda deactivate`](): desactiva el entorno virtual\n",
     "- [`conda install $PACKAGE_NAME`](https://docs.conda.io/projects/conda/en/stable/commands/install.html): instala una libreria\n",
-    "- [`conda remove --name $ENVIRONMENT_NAME $PACKAGE_NAME`](): elimina una libreria\n"
+    "- [`conda remove --name $ENVIRONMENT_NAME $PACKAGE_NAME`](): elimina una libreria\n",
+    "\n",
+    "[CONDA CHEATSHEET](https://docs.conda.io/projects/conda/en/4.6.0/_downloads/52a95608c49671267e40c689e0bc00ca/conda-cheatsheet.pdf)\n"
    ]
   },
   {
