--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -70,7 +70,62 @@
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
     "- [Another AI Stanford Course](https://www.youtube.com/watch?v=ZiwogMtbjr4&list=PLoROMvodv4rOca_Ovz1DvdtWuz8BfSWL2)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0de29fd",
+   "metadata": {},
+   "source": [
+    "# Robots\n",
+    "\n",
+    "## Courses\n",
+    "- [Robot Learning Evolution by Google Researcher](https://www.youtube.com/watch?v=ct4tdyyNDY4)\n",
+    "- [Introduction to Flow Matching and Diffusion Models](https://diffusion.csail.mit.edu)\n",
+    "- [An Introduction to the Action Chunking Transformer](https://radekosmulski.com/how-to-train-your-robot-with-a-transformer/amp/)\n",
+    "- [Hugging Face Research Talks](https://www.youtube.com/watch?v=ft73x0LfGpM&list=PL9XeArvMKS4wSLOTDDw1bqngysv9ixQu7)\n",
+    "\n",
+    "## Simulators\n",
+    "\n",
+    "- [ROS](https://www.ros.org)\n",
+    "- [MuJoCo](https://mujoco.readthedocs.io/en/stable/overview.html)\n",
+    "- [Genesis](https://genesis-world.readthedocs.io/en/latest/)\n",
+    "- [NVIDIA Isacc](https://developer.nvidia.com/isaac/sim)\n",
+    "- [Gymnasium Robotics](https://robotics.farama.org)\n",
+    "- [panda-gym](https://github.com/qgallouedec/panda-gym)\n",
+    "\n",
+    "### LeRobot\n",
+    "- [LeRobot](https://github.com/huggingface/lerobot)\n",
+    "\n",
+    "### SO100\n",
+    "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)\n",
+    "- [How to use the SO-ARM100 robotic arm in Lerobot](https://wiki.seeedstudio.com/lerobot_so100m/)\n",
+    "- [How to Import and Control SO100Arm Kit in Isaac Sim](https://wiki.seeedstudio.com/lerobot_so100m_isaacsim/)\n",
+    "- [Buy Assembled](https://shop.wowrobo.com/products/so-arm100-diy-kit-assembled-version?variant=46419129762009)\n",
+    "- [Buy fancy version](https://robots.phospho.ai)\n",
+    "\n",
+    "### Cinematica Inversa\n",
+    "- [Robotics Toolbox for Python](https://petercorke.github.io/robotics-toolbox-python/IK/ik.html)\n",
+    "\n",
+    "#### Feetech Servos\n",
+    "- [feetech servos sdk](https://github.com/Adam-Software/Feetech-Servo-SDK/tree/main)\n",
+    "- [feetech examples](https://github.com/hansonrobotics/servo_experiments)\n",
+    "- [lerobot feetech class](https://github.com/huggingface/lerobot/blob/main/lerobot/common/robot_devices/motors/feetech.py)\n",
+    "  \n",
     "-----\n",
+    "\n",
+    "#### Cool Papers:\n",
+    "\n",
+    "- [Aloha](https://tonyzhaozh.github.io/aloha/) -> [Mobile Aloha](https://mobile-aloha.github.io) -> [Gymnasium Environment](https://github.com/huggingface/gym-aloha)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47975063",
+   "metadata": {},
+   "source": [
+    "## RL on Games\n",
     "\n",
     "### Hugging Face RL Course\n",
     "\n",
@@ -113,37 +168,7 @@
     "- [Bryan Oliveira University Goias](https://bryanoliveira.github.io/blog/2021-09-05-soccer-twos-env/)\n",
     "- [Gym Evn](https://github.com/bryanoliveira/soccer-twos-env)\n",
     "\n",
-    "-----\n",
-    "\n",
-    "## Robots\n",
-    "\n",
-    "- [ROS](https://www.ros.org)\n",
-    "- [MuJoCo](https://mujoco.readthedocs.io/en/stable/overview.html)\n",
-    "- [Genesis](https://genesis-world.readthedocs.io/en/latest/)\n",
-    "- [NVIDIA Isacc](https://developer.nvidia.com/isaac/sim)\n",
-    "- [Gymnasium Robotics](https://robotics.farama.org)\n",
-    "- [panda-gym](https://github.com/qgallouedec/panda-gym)\n",
-    "\n",
-    "### LeRobot\n",
-    "- [LeRobot](https://github.com/huggingface/lerobot)\n",
-    "\n",
-    "### SO100\n",
-    "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)\n",
-    "- [How to use the SO-ARM100 robotic arm in Lerobot](https://wiki.seeedstudio.com/lerobot_so100m/)\n",
-    "- [How to Import and Control SO100Arm Kit in Isaac Sim](https://wiki.seeedstudio.com/lerobot_so100m_isaacsim/)\n",
-    "- [Buy Assembled](https://shop.wowrobo.com/products/so-arm100-diy-kit-assembled-version?variant=46419129762009)\n",
-    "- [Buy fancy version](https://robots.phospho.ai)\n",
-    "\n",
-    "#### Feetech Servos\n",
-    "- [feetech servos sdk](https://github.com/Adam-Software/Feetech-Servo-SDK/tree/main)\n",
-    "- [feetech examples](https://github.com/hansonrobotics/servo_experiments)\n",
-    "- [lerobot feetech class](https://github.com/huggingface/lerobot/blob/main/lerobot/common/robot_devices/motors/feetech.py)\n",
-    "  \n",
-    "-----\n",
-    "\n",
-    "#### Cool Papers:\n",
-    "\n",
-    "- [Aloha](https://tonyzhaozh.github.io/aloha/) -> [Mobile Aloha](https://mobile-aloha.github.io) -> [Gymnasium Environment](https://github.com/huggingface/gym-aloha)\n"
+    "-----"
    ]
   }
  ],
