--- a/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
@@ -883,7 +883,8 @@
     "- [Understanding pipelines, models and schedulers](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)\n",
     "- [How does Stable Diffusion work?](https://huggingface.co/blog/stable_diffusion#how-does-stable-diffusion-work)\n",
     "- [Stable Diffusion from scratch](https://github.com/Animadversio/DiffusionFromScratch )\n",
-    "- [Andrew Chan Notes on Diffusion](https://andrewkchan.dev/posts/diffusion.html)"
+    "- [Andrew Chan Notes on Diffusion](https://andrewkchan.dev/posts/diffusion.html)\n",
+    "- [Deeplearning.ai: How diffusion models work](https://www.deeplearning.ai/short-courses/how-diffusion-models-work/)"
    ]
   }
  ],
