--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -417,6 +417,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a7ec61b",
+   "metadata": {},
+   "source": [
+    "Otra metrica importance es la calibracion de nuestro modelo: en un modelo bien calibrado se puede interpretar el resultado de predict_proba como la confianza de la prediccion: [ver mas](https://scikit-learn.org/stable/modules/calibration.html). La metrica Brier Score nos permite saber que tan bien calibrado esta nuestro modelo. Cuanto mas cercana a cero mejor calibrado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8380f03f-a8cf-4db9-a701-1976b9b190ee",
    "metadata": {},
    "source": [
