--- a/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb
@@ -15,7 +15,9 @@
     "id": "4ET4vo1TRFSM"
    },
    "source": [
-    "En este tutorial veremos como funciona la aquitectura de las redes neuronales de tipo diffusers y esta basado en el tutorial de [HuggingFace](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)"
+    "En este tutorial veremos como funciona la aquitectura de las redes neuronales de tipo diffusers y esta basado en el tutorial de [HuggingFace](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)\n",
+    "\n",
+    "Para una implementacion simple ver el siguiente [repositorio](https://github.com/tanelp/tiny-diffusion)"
    ]
   },
   {
