--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -17,33 +17,43 @@
    "source": [
     "## Resumen\n",
     "\n",
+    "- Si solo quieres hacer unas pruebas en jupyter lab sin crear un proyecto puedes usar el comando `uvx`:\n",
+    "    ```bash\n",
+    "    uvx --python 3.13 jupyter lab\n",
+    "    ```\n",
+    "    Luego en la jupyter notebook puedes utilizar el comando \n",
+    "    ```bash\n",
+    "    !uv pip install pandas\n",
+    "    ```\n",
+    "    para instalar las librerias que necesites.\n",
+    "\n",
     "- Si solo necesitas librerias de PyPi puedes utilizar [uv](https://docs.astral.sh/uv/) y todo sera mas simple y rapido.\n",
-    "```bash\n",
-    "uv init mi-proyecto\n",
-    "cd mi-proyecto\n",
-    "uv add numpy\n",
-    "uv add jupyter lab\n",
-    "uv run jupyter lab\n",
-    "```\n",
+    "    ```bash\n",
+    "    uv init mi-proyecto\n",
+    "    cd mi-proyecto\n",
+    "    uv add numpy\n",
+    "    uv add jupyter lab\n",
+    "    uv run jupyter lab\n",
+    "    ```\n",
     "\n",
     "- Si vas a programar localmente en jupyter lab y necesitas instalar librerias desde Anaconda y desde PyPi puedes utilizar pixi y sera tan simple como hacer:\n",
-    "```bash\n",
-    "pixi init mi-proyecto\n",
-    "cd mi-proyecto\n",
-    "pixi add numpy\n",
-    "pixi add --pypi pandas\n",
-    "pixi add jupyter lab\n",
-    "pixi run jupyter lab\n",
-    "```\n",
+    "    ```bash\n",
+    "    pixi init mi-proyecto\n",
+    "    cd mi-proyecto\n",
+    "    pixi add numpy\n",
+    "    pixi add --pypi pandas\n",
+    "    pixi add jupyter lab\n",
+    "    pixi run jupyter lab\n",
+    "    ```\n",
     "\n",
     "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
-    "```bash\n",
-    "cd mi-proyecto\n",
-    "python3 -m venv .venv\n",
-    "source .venv/bin/activate\n",
-    "python3 -m pip install --upgrade pip\n",
-    "python3 -m pip install pandas\n",
-    "```\n",
+    "    ```bash\n",
+    "    cd mi-proyecto\n",
+    "    python3 -m venv .venv\n",
+    "    source .venv/bin/activate\n",
+    "    python3 -m pip install --upgrade pip\n",
+    "    python3 -m pip install pandas\n",
+    "    ```\n",
     "\n",
     "- Si solo vas a programar utilizando Google Colab instala las librerias que necesites todas juntas en una de las primeras celdas. Esto te servira para saber que configuracion necesitas a la hora de llevarlo a produccion.\n",
     "\n",
