--- a/cursos/espanol/mlops/E_interesting_stuff.ipynb
+++ b/cursos/espanol/mlops/E_interesting_stuff.ipynb
@@ -13,7 +13,8 @@
     "- [LLM Twin Course: Building Your Production-Ready AI Replica](https://github.com/decodingml/llm-twin-course)\n",
     "\n",
     "# Articulos Interesantes\n",
-    "\n",
+    "- [How to build production-ready ML Systems](https://theneuralmaze.substack.com/p/how-to-build-production-ready-ml)\n",
+    "- [Deploying a Multimodal Agent on AWS Lambda](https://theneuralmaze.substack.com/p/deploying-a-multimodal-agent-on-aws)\n",
     "- [How we built ngrok's data platform](https://ngrok.com/blog-post/how-we-built-ngroks-data-platform)\n",
     "- [StackOverflow Tech survey](https://survey.stackoverflow.co/2024/technology#most-popular-technologies)\n",
     "- [ML in Go with a Python Sidecar](https://news.ycombinator.com/item?id=42108933)\n",
