--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -104,10 +104,10 @@
     "**Todas las pruebas de hipótesis comparan estimadores estadísticos** (como medias, proporciones o varianzas), ya sea **entre sí** o **contra un valor poblacional teórico**.\n",
     "\n",
     "* **Estadístico muestral:** valor calculado a partir de los datos de una muestra.\n",
-    "  Ejemplo: media muestral ( \\bar{x} ), proporción muestral ( \\hat{p} ), varianza muestral ( s^2 ).\n",
+    "  Ejemplo: media muestral ( $\\bar{x}$ ), proporción muestral ( $\\hat{p}$ ), varianza muestral ( $s^2$ ).\n",
     "\n",
     "* **Parámetro poblacional:** valor verdadero (teórico o conocido) de toda la población.\n",
-    "  Ejemplo: media poblacional ( \\mu ), proporción poblacional ( p ), varianza poblacional ( \\sigma^2 ).\n",
+    "  Ejemplo: media poblacional ( $\\mu$ ), proporción poblacional ( $p$ ), varianza poblacional ( $\\sigma^2$ ).\n",
     "\n",
     "\n",
     "## Ejemplos:\n",
@@ -117,46 +117,115 @@
     "Comparas un **estadístico muestral** con un **parámetro poblacional** (que puede ser un valor hipotético).\n",
     "\n",
     "Ejemplo:\n",
-    "[\n",
+    "$$\n",
     "H_0: \\mu = 100\n",
-    "]\n",
-    "[\n",
+    "$$\n",
+    "$$\n",
     "t = \\frac{\\bar{x} - \\mu_0}{s / \\sqrt{n}}\n",
-    "]\n",
+    "$$\n",
     "\n",
     "### 🔹 2. **Dos muestras independientes**\n",
     "\n",
     "Comparas **dos estimadores muestrales** (por ejemplo, dos medias o proporciones).\n",
     "\n",
     "Ejemplo:\n",
-    "[\n",
+    "$$\n",
     "H_0: \\mu_1 = \\mu_2\n",
-    "]\n",
-    "[\n",
+    "$$\n",
+    "$$\n",
     "t = \\frac{\\bar{x}_1 - \\bar{x}_2}{\\text{error estándar de la diferencia}}\n",
-    "]\n",
+    "$$\n",
     "\n",
     "### 🔹 3. **Dos mediciones del mismo grupo (pareadas)**\n",
     "\n",
     "Comparas **dos estimadores dependientes** (las medias antes y después).\n",
     "\n",
-    "[\n",
+    "$$\n",
     "H_0: \\mu_D = 0\n",
-    "]\n",
+    "$$\n",
     "\n",
     "### 🔹 4. **Más de dos grupos (ANOVA)**\n",
     "\n",
     "Comparas **varias medias muestrales** (estimadores)\n",
     "para ver si podrían venir de la **misma media poblacional**.\n",
     "\n",
-    "[\n",
+    "$$\n",
     "H_0: \\mu_1 = \\mu_2 = \\mu_3 = \\dots\n",
-    "]\n",
+    "$$\n",
     "\n",
     "### 🔹 5. **Chi-cuadrado**\n",
     "\n",
     "Comparas **frecuencias observadas (muestrales)** con **frecuencias esperadas** (basadas en una hipótesis poblacional o modelo teórico).\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "815c9f20",
+   "metadata": {},
+   "source": [
+    "## Ejemplo: Chocolates de 100 gramos\n",
+    "\n",
+    "Supongamos que una fábrica produce chocolates que **deberían pesar 100 g**.\n",
+    "Queremos comprobar si la máquina está funcionando bien o no.\n",
+    "\n",
+    "\n",
+    "## 1. Planteamos las hipótesis\n",
+    "\n",
+    "* **Hipótesis nula (H₀):**\n",
+    "  ( $\\mu = 100$ )\n",
+    "  (el peso promedio de todos los chocolates es 100 g)\n",
+    "\n",
+    "* **Hipótesis alternativa (H₁):**\n",
+    "  ( $\\mu \\neq 100$ )\n",
+    "  (el peso promedio es distinto de 100 g)\n",
+    "\n",
+    "\n",
+    "## 2. Tomamos una muestra\n",
+    "\n",
+    "Pesamos 30 chocolates y obtenemos:\n",
+    "\n",
+    "* Media muestral: ( $\\bar{x} = 98.5$ )\n",
+    "* Desviación estándar muestral: ( $s = 2.5$ )\n",
+    "* Tamaño de la muestra: ( $n = 30$ )\n",
+    "\n",
+    "\n",
+    "##  3. Calculamos el estadístico de prueba\n",
+    "\n",
+    "Queremos medir **cuánto se aleja la media muestral (98.5)** del valor esperado (100), en unidades de error estándar.\n",
+    "\n",
+    "El **estadístico t** se calcula así:\n",
+    "\n",
+    "$$\n",
+    "t = \\frac{\\bar{x} - \\mu_0}{s / \\sqrt{n}}\n",
+    "$$\n",
+    "\n",
+    "Sustituimos:\n",
+    "\n",
+    "$$\n",
+    "t = \\frac{98.5 - 100}{2.5 / \\sqrt{30}} = \\frac{-1.5}{0.456} \\approx -3.29\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "## 4. Buscamos el p-valor\n",
+    "\n",
+    "Con ( n - 1 = 29 ) grados de libertad, consultamos una **tabla t de Student** o usamos Python/R/Excel.\n",
+    "\n",
+    "El **p-valor ≈ 0.0026** (en un test bilateral).\n",
+    "\n",
+    "\n",
+    "## 5. Tomamos la decisión\n",
+    "\n",
+    "Elegimos un **nivel de significación α = 0.05**.\n",
+    "\n",
+    "Como\n",
+    "$$\n",
+    "p\\text{-valor} = 0.0026 < 0.05\n",
+    "$$\n",
+    "\n",
+    "👉 **Rechazamos H₀**.\n",
+    "Hay evidencia estadística de que el peso promedio **no es 100 g**.\n",
+    "Es muy probable que la máquina esté fallando.\n"
    ]
   },
   {
@@ -186,13 +255,20 @@
     "\n",
     "# Parameters for the small-sample chocolate example with unknown sigma\n",
     "mu = 100             # hypothesized population mean\n",
-    "sample_mean = 98.5   # observed sample mean\n",
-    "s = 2.5              # sample standard deviation (used instead of population sigma)\n",
-    "n = 30               # small sample -> use t-distribution\n",
+    "sample_mean = 98.5    # observed sample mean\n",
+    "s = 2.5                # sample standard deviation\n",
+    "n = 10               # small sample -> use t-distribution\n",
     "df = n - 1           # degrees of freedom\n",
+    "alpha = 0.05         # significance level (right-tailed for this example)\n",
     "\n",
     "# Compute t statistic\n",
     "t_stat = (sample_mean - mu) / (s / np.sqrt(n))\n",
+    "\n",
+    "# Compute p-value (right tail)\n",
+    "p_value = 1 - t.cdf(t_stat, df)\n",
+    "\n",
+    "# Critical t value for alpha (right tail)\n",
+    "t_crit = t.ppf(1 - alpha, df)\n",
     "\n",
     "# Prepare t distribution values\n",
     "x = np.linspace(-4, 4, 500)\n",
@@ -203,21 +279,29 @@
     "# Plot t distribution\n",
     "plt.plot(x, y, linewidth=2)\n",
     "\n",
-    "# Mark mean (0)\n",
+    "# Mark zero mean (t = 0)\n",
     "plt.axvline(0, linestyle='--')\n",
     "\n",
-    "# Mark observed t value\n",
+    "# Mark observed t statistic\n",
     "plt.axvline(t_stat, linestyle='--')\n",
     "\n",
-    "# Shade right-tail p-value region\n",
-    "plt.fill_between(x, y, where=(x >= t_stat), alpha=0.5)\n",
+    "# Mark critical t value (alpha)\n",
+    "plt.axvline(t_crit, linestyle='--')\n",
     "\n",
-    "plt.title(f\"t Distribution (df = {df}) with Observed t Statistic\\nSample mean = {sample_mean} g, μ = {100} g\")\n",
+    "# Shade area for p-value\n",
+    "plt.fill_between(x, y, where=(x >= t_stat), alpha=0.3)\n",
+    "\n",
+    "# Annotate p-value and alpha\n",
+    "plt.text(t_stat + 0.1, max(y) * 0.4, f\"t = {t_stat:.2f}\", fontsize=12)\n",
+    "plt.text(t_crit + 0.1, max(y) * 0.6, f\"α = {alpha}\\nt_crit = {t_crit:.2f}\", fontsize=12)\n",
+    "plt.text(-3.8, max(y) * 0.9, f\"p-value = {p_value:.4f}\", fontsize=12)\n",
+    "\n",
+    "plt.title(f\"t Distribution (df = {df})\\nSample mean = 103 g, μ = 100 g\")\n",
     "plt.xlabel(\"t value\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.grid(True)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
