--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -253,55 +253,69 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import t\n",
     "\n",
-    "# Parameters for the small-sample chocolate example with unknown sigma\n",
-    "mu = 100             # hypothesized population mean\n",
-    "sample_mean = 98.5    # observed sample mean\n",
-    "s = 2.5                # sample standard deviation\n",
-    "n = 10               # small sample -> use t-distribution\n",
-    "df = n - 1           # degrees of freedom\n",
-    "alpha = 0.05         # significance level (right-tailed for this example)\n",
+    "# Parámetros para el ejemplo del chocolate con muestra pequeña y sigma desconocida\n",
+    "mu = 100             # media poblacional hipotetizada\n",
+    "sample_mean = 98.5    # media muestral observada\n",
+    "s = 2.5                # desviación estándar muestral\n",
+    "n = 30               # tamaño de la muestra (pequeña -> usar distribución t)\n",
+    "df = n - 1           # grados de libertad\n",
+    "alpha = 0.05         # nivel de significación (para prueba bilateral)\n",
     "\n",
-    "# Compute t statistic\n",
+    "# Calcular el estadístico t\n",
     "t_stat = (sample_mean - mu) / (s / np.sqrt(n))\n",
     "\n",
-    "# Compute p-value (right tail)\n",
-    "p_value = 1 - t.cdf(t_stat, df)\n",
+    "# Calcular el p-valor (bilateral)\n",
+    "# Dado que t_stat es negativo, calculamos el área de la cola izquierda y multiplicamos por 2\n",
+    "p_value = 2 * t.cdf(t_stat, df)\n",
     "\n",
-    "# Critical t value for alpha (right tail)\n",
-    "t_crit = t.ppf(1 - alpha, df)\n",
+    "# Valores críticos de t para alfa (bilateral)\n",
+    "t_crit_lower = t.ppf(alpha / 2, df)\n",
+    "t_crit_upper = t.ppf(1 - alpha / 2, df)\n",
     "\n",
-    "# Prepare t distribution values\n",
+    "# Preparar los valores de la distribución t\n",
     "x = np.linspace(-4, 4, 500)\n",
     "y = t.pdf(x, df)\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Plot t distribution\n",
-    "plt.plot(x, y, linewidth=2)\n",
+    "# Graficar la distribución t\n",
+    "plt.plot(x, y, linewidth=2, color='blue', label='Distribución t')\n",
     "\n",
-    "# Mark zero mean (t = 0)\n",
-    "plt.axvline(0, linestyle='--')\n",
+    "# Marcar la media cero (t = 0)\n",
+    "plt.axvline(0, linestyle='--', color='gray', label='Media (t=0)')\n",
     "\n",
-    "# Mark observed t statistic\n",
-    "plt.axvline(t_stat, linestyle='--')\n",
+    "# Marcar el estadístico t observado y su contraparte positiva\n",
+    "plt.axvline(t_stat, linestyle='--', color='red', label=f't-estadístico = {t_stat:.2f}')\n",
+    "plt.axvline(-t_stat, linestyle='--', color='red') # |t_stat|\n",
     "\n",
-    "# Mark critical t value (alpha)\n",
-    "plt.axvline(t_crit, linestyle='--')\n",
+    "# Marcar los valores críticos de t\n",
+    "plt.axvline(t_crit_lower, linestyle=':', color='green', label=f't crítico (α/2) = {t_crit_lower:.2f}')\n",
+    "plt.axvline(t_crit_upper, linestyle=':', color='green', label=f't crítico (1-α/2) = {t_crit_upper:.2f}')\n",
     "\n",
-    "# Shade area for p-value\n",
-    "plt.fill_between(x, y, where=(x >= t_stat), alpha=0.3)\n",
+    "# Sombrear el área para el p-valor (dos colas)\n",
+    "# Sombrear la cola izquierda\n",
+    "plt.fill_between(x, y, where=(x <= t_stat), color='red', alpha=0.3, label=f'p-valor/2 = {p_value/2:.4f}')\n",
+    "# Sombrear la cola derecha\n",
+    "plt.fill_between(x, y, where=(x >= -t_stat), color='red', alpha=0.3)\n",
     "\n",
-    "# Annotate p-value and alpha\n",
-    "plt.text(t_stat + 0.1, max(y) * 0.4, f\"t = {t_stat:.2f}\", fontsize=12)\n",
-    "plt.text(t_crit + 0.1, max(y) * 0.6, f\"α = {alpha}\\nt_crit = {t_crit:.2f}\", fontsize=12)\n",
-    "plt.text(-3.8, max(y) * 0.9, f\"p-value = {p_value:.4f}\", fontsize=12)\n",
+    "# Anotar p-valor y alfa\n",
+    "plt.text(t_stat - 0.1, max(y) * 0.4, f\"t = {t_stat:.2f}\", fontsize=10, color='red', ha='right')\n",
+    "plt.text(-t_stat + 0.1, max(y) * 0.4, f\"-t = {-t_stat:.2f}\", fontsize=10, color='red', ha='left')\n",
     "\n",
-    "plt.title(f\"t Distribution (df = {df})\\nSample mean = 103 g, μ = 100 g\")\n",
-    "plt.xlabel(\"t value\")\n",
-    "plt.ylabel(\"Density\")\n",
+    "plt.text(t_crit_lower - 0.1, max(y) * 0.6, f\"t_crit_inf = {t_crit_lower:.2f}\", fontsize=10, color='green', ha='right')\n",
+    "plt.text(t_crit_upper + 0.1, max(y) * 0.6, f\"t_crit_sup = {t_crit_upper:.2f}\", fontsize=10, color='green', ha='left')\n",
+    "\n",
+    "\n",
+    "plt.text(-3.8, max(y) * 0.9, f\"p-valor = {p_value:.4f}\", fontsize=12, color='red')\n",
+    "plt.text(2.5, max(y) * 0.9, f\"α = {alpha}\", fontsize=12, color='green')\n",
+    "\n",
+    "\n",
+    "plt.title(f\"Distribución t (gl = {df})\\nMedia muestral = {sample_mean} g, μ = {mu} g (Test Bilateral)\", fontsize=14)\n",
+    "plt.xlabel(\"Valor t\", fontsize=12)\n",
+    "plt.ylabel(\"Densidad\", fontsize=12)\n",
     "plt.grid(True)\n",
-    "\n",
-    "plt.show()\n"
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
