--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "\n",
     "\n",
-    "## 🎯 Ejemplo simple\n",
+    "## Ejemplo simple\n",
     "\n",
     "Imagina que una fábrica produce chocolates que deberían pesar **100 gramos**.\n",
     "Tú sospechas que **la máquina está fallando** y que los chocolates pesan menos.\n",
@@ -26,7 +26,7 @@
     "3. Usas la estadística para decidir si los resultados indican que **la máquina realmente cambió** o si **solo fue casualidad**.\n",
     "\n",
     "\n",
-    "## 👨🏻‍🍳 La Receta Paso a paso\n",
+    "## La Receta Paso a paso\n",
     "\n",
     "### 1. Planteamos dos hipótesis\n",
     "\n",
@@ -60,38 +60,6 @@
     "* Si el **p-valor es grande**:\n",
     "  👉 “Estos resultados pueden ser por casualidad.”\n",
     "  → **No rechazamos H₀**.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "851f7112",
-   "metadata": {},
-   "source": [
-    "### La Receta paso a paso\n",
-    "1. Planteamos dos hipótesis\n",
-    "- Hipótesis nula (H₀): “No pasa nada nuevo”.\n",
-    "  - Los chocolates pesan 100g como siempre.\n",
-    "- Hipótesis alternativa (H₁): “Sí hay un cambio”.\n",
-    "  - Los chocolates no pesan 100g.\n",
-    "\n",
-    "2. Recolectamos datos\n",
-    "Pesas, por ejemplo, 30 chocolates y ves que pesan en promedio 98g.\n",
-    "\n",
-    "3. Calculamos la probabilidad (p-valor)\n",
-    "El p-valor te dice:\n",
-    "“Si la máquina realmente funciona bien (H₀ es cierta), ¿qué tan probable es obtener un resultado tan raro como el tuyo?”\n",
-    "Si esa probabilidad es muy baja, significa que tu resultado sería casi imposible si todo estuviera normal.\n",
-    "\n",
-    "4. Tomamos una decisión\n",
-    "Si el p-valor es pequeño (por ejemplo, menor que 0.05):\n",
-    "\n",
-    "👉 Decimos: “Esto es demasiado raro, parece que la máquina cambió”.\n",
-    "\n",
-    "→ Rechazamos H₀.\n",
-    "\n",
-    "Si el p-valor es grande:\n",
-    "👉 “Estos resultados pueden ser por casualidad.”\n",
-    "→ No rechazamos H₀."
    ]
   },
   {
