--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "- [Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
     "- [Building LLMs from the Ground Up: A 3-hour Coding Workshop by Sebastian Raschka](https://magazine.sebastianraschka.com/p/building-llms-from-the-ground-up)\n",
+    "- [Build a Large Language Model (From Scratch)](https://sebastianraschka.com/llms-from-scratch/)\n",
     "- [Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
     "- [GPT in 60 Lines of NumPy by Jay Mody](https://jaykmody.com/blog/gpt-from-scratch/)\n",
     "- [The Illustrated Transformer by Jay Alammar](https://jalammar.github.io/illustrated-transformer/)\n",
@@ -26,6 +27,7 @@
     "- [Transformer Visualization](https://bbycroft.net/llm)\n",
     "- [Attention Visualization](https://github.com/jessevig/bertviz)\n",
     "- [Transformer Explainer: Interactive Learning of Text-Generative Models](https://arxiv.org/abs/2408.04619)\n",
+    "\n",
     "\n",
     "\n",
     "------------------------------\n",
@@ -47,8 +49,16 @@
     "Tratando de entender que conceptos crea una red tipo transformer\n",
     "\n",
     "- [Mapping the Mind of a Large Language Model by Anthropic](https://www.anthropic.com/news/mapping-mind-language-model)\n",
-    "- [Extracting Concepts from GPT-4\n",
-    "](https://openai.com/index/extracting-concepts-from-gpt-4/)"
+    "- [Extracting Concepts from GPT-4](https://openai.com/index/extracting-concepts-from-gpt-4/)\n",
+    "- [Tracing the thoughts of a large language model](https://www.anthropic.com/research/tracing-thoughts-language-model)\n",
+    "- [Signs of introspection in large language models](https://www.anthropic.com/research/introspection)\n",
+    "- [Why language models hallucinate](https://openai.com/index/why-language-models-hallucinate/)\n",
+    "- [Understanding neural networks through sparse circuits](https://openai.com/index/understanding-neural-networks-through-sparse-circuits/)\n",
+    "- [The Illusion of Thinking: Understanding the Strengths and Limitations of Reasoning Models via the Lens of Problem Complexity](https://arxiv.org/abs/2506.06941)\n",
+    "\n",
+    "Tratando de evaluar LLMs:\n",
+    "- [Measuring the performance of our models on real-world tasks](https://openai.com/index/gdpval/)\n",
+    "- [Defining and evaluating political bias in LLMs](https://openai.com/index/defining-and-evaluating-political-bias-in-llms/)"
    ]
   },
   {
