--- a/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "- [Visualizacion](https://adamharley.com/nn_vis/)\n",
     "- [Visualizacion con explicacion](https://poloclub.github.io/cnn-explainer/)\n",
+    "- [Stanford CS231N Deep Learning for Computer Vision I 2025](https://www.youtube.com/playlist?list=PLoROMvodv4rOmsNzYBMe0gJY2XS8AQg16)\n",
     "- [NYU Deep Learning SP20](https://www.youtube.com/playlist?list=PLLHTzKZzVU9eaEyErdV26ikyolxOsz6mq)\n",
     "- [Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
     "- [The little book of Deep Learning by Francois Fleuret](https://fleuret.org/public/lbdl.pdf)"
