--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -34,11 +34,11 @@
     "\n",
     "Cursos Completos:\n",
     "\n",
+    "- [Stanford CS336 (2025): Language Modeling from Scratch](https://www.youtube.com/playlist?list=PLoROMvodv4rOY23Y0BoGoBGgQ1zmU_MT_)\n",
+    "- [Stanford CS336 (2024): Language Modeling from Scratch](https://stanford-cs336.github.io/spring2024/)\n",
+    "- [Stanford CS224N (2025): Natural Language Processing with Deep Learning](https://www.youtube.com/playlist?list=PLoROMvodv4rOaMFbaqxPDoLWjDaRAdP9D)\n",
+    "- [Stanford CS224N (2024): Natural Language Processing with Deep Learning](https://web.stanford.edu/class/cs224n/)\n",
     "- [Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
-    "- [CS224N: Natural Language Processing with Deep Learning\n",
-    "Stanford / Spring 2024](https://web.stanford.edu/class/cs224n/)\n",
-    "- [Stanford CS224N: Natural Language Processing with Deep Learning | 2023](https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4)\n",
-    "- [Stanford CS224N NLP with Deep Learning | 2023](https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW)\n",
     "\n",
     "------------------------------\n",
     "\n",
@@ -58,6 +58,7 @@
     "\n",
     "Tratando de evaluar LLMs:\n",
     "- [Measuring the performance of our models on real-world tasks](https://openai.com/index/gdpval/)\n",
+    "- [DSPy: Programming—not prompting—Foundation Models](https://github.com/stanfordnlp/dspy)\n",
     "- [Defining and evaluating political bias in LLMs](https://openai.com/index/defining-and-evaluating-political-bias-in-llms/)"
    ]
   },
