--- a/cursos/espanol/programacion/A5_clases.ipynb
+++ b/cursos/espanol/programacion/A5_clases.ipynb
@@ -435,6 +435,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65ef3f94",
+   "metadata": {},
+   "source": [
+    "# Mini DataFrame\n",
+    "\n",
+    "Aqui mostramos como se puede imitar le funcionamiento de la clase DataFrame de Pandas y la \"sobrecarga de operadores\" que es el uso de funciones para decir que debe hacer la clase cuando se usan simbolos como [] y + entre otros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049e8dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MiniDataFrame:\n",
+    "    def __init__(self, data: dict):\n",
+    "        self.data = data\n",
+    "        self.columns = list(data.keys())\n",
+    "        self.length = len(next(iter(data.values())))\n",
+    "\n",
+    "    # df[\"col\"]\n",
+    "    # df[0]\n",
+    "    def __getitem__(self, key):\n",
+    "        if isinstance(key, str):\n",
+    "            return self.data[key]\n",
+    "\n",
+    "        if isinstance(key, int):\n",
+    "            return {col: self.data[col][key] for col in self.columns}\n",
+    "\n",
+    "        raise TypeError(\"Key must be str (column) or int (row index)\")\n",
+    "\n",
+    "    # df1 + df2\n",
+    "    # df + 1\n",
+    "    def __add__(self, other):\n",
+    "        if isinstance(other, MiniDataFrame):\n",
+    "            return self._add_dataframe(other)\n",
+    "\n",
+    "        if isinstance(other, (int, float)):\n",
+    "            return self._add_scalar(other)\n",
+    "\n",
+    "        return NotImplemented\n",
+    "\n",
+    "    def _add_scalar(self, value):\n",
+    "        new_data = {\n",
+    "            col: [x + value for x in values]\n",
+    "            for col, values in self.data.items()\n",
+    "        }\n",
+    "        return MiniDataFrame(new_data)\n",
+    "\n",
+    "    def _add_dataframe(self, other):\n",
+    "        if self.columns != other.columns:\n",
+    "            raise ValueError(\"Columns must match\")\n",
+    "\n",
+    "        new_data = {\n",
+    "            col: [\n",
+    "                a + b for a, b in zip(self.data[col], other.data[col])\n",
+    "            ]\n",
+    "            for col in self.columns\n",
+    "        }\n",
+    "        return MiniDataFrame(new_data)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        lines = [\"MiniDataFrame\"]\n",
+    "        for i in range(self.length):\n",
+    "            row = \", \".join(\n",
+    "                f\"{col}={self.data[col][i]}\" for col in self.columns\n",
+    "            )\n",
+    "            lines.append(f\"  [{i}] {row}\")\n",
+    "        return \"\\n\".join(lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f7d25eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = MiniDataFrame({\n",
+    "    \"edad\": [20, 30, 40],\n",
+    "    \"altura\": [170, 180, 175]\n",
+    "})\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print(df[\"edad\"])\n",
+    "print(df[1])\n",
+    "\n",
+    "df2 = df + 1\n",
+    "print(df2)\n",
+    "\n",
+    "df3 = MiniDataFrame({\n",
+    "    \"edad\": [1, 2, 3],\n",
+    "    \"altura\": [10, 10, 10]\n",
+    "})\n",
+    "\n",
+    "print(df + df3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bdbee4b-8c6f-431d-ab66-99fdd7543c91",
    "metadata": {},
    "source": [
